{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 66,
  "lineage": "e371d51d-cea0-3ec0-c78f-83a0ae51acd5",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:696717482880:loadbalancer/app/coding-cloud-lb/a12d445e1ba6dc26",
            "arn_suffix": "app/coding-cloud-lb/a12d445e1ba6dc26",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "coding-cloud-lb-1304320416.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:696717482880:loadbalancer/app/coding-cloud-lb/a12d445e1ba6dc26",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "coding-cloud-lb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-07834ed1cef5241d7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f766eb264e22f24"
              },
              {
                "subnet_id": "subnet-0ddaf1f0660136aa8"
              }
            ],
            "subnets": [
              "subnet-00f766eb264e22f24",
              "subnet-0ddaf1f0660136aa8"
            ],
            "vpc_id": "vpc-0a3d99fdba508055f",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:696717482880:loadbalancer/app/coding-cloud-lb/a12d445e1ba6dc26"
          },
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:696717482880:listener/app/coding-cloud-lb/a12d445e1ba6dc26/28c24b8c88f900c7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:696717482880:targetgroup/coding-cloud-vm-target/ddd99047db3e3b24",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:696717482880:listener/app/coding-cloud-lb/a12d445e1ba6dc26/28c24b8c88f900c7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:696717482880:loadbalancer/app/coding-cloud-lb/a12d445e1ba6dc26",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:696717482880:listener/app/coding-cloud-lb/a12d445e1ba6dc26/28c24b8c88f900c7"
          },
          "dependencies": [
            "module.ec2.aws_alb.lb",
            "module.ec2.aws_alb_target_group.lb-target",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "lb-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:696717482880:targetgroup/coding-cloud-vm-target/ddd99047db3e3b24",
            "arn_suffix": "targetgroup/coding-cloud-vm-target/ddd99047db3e3b24",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:696717482880:targetgroup/coding-cloud-vm-target/ddd99047db3e3b24",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:696717482880:loadbalancer/app/coding-cloud-lb/a12d445e1ba6dc26"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "coding-cloud-vm-target",
            "port": 31000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:696717482880:targetgroup/coding-cloud-vm-target/ddd99047db3e3b24"
          },
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "vm-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:696717482880:targetgroup/coding-cloud-vm-target/ddd99047db3e3b24-20260918132910540100000005",
            "port": 31000,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:696717482880:targetgroup/coding-cloud-vm-target/ddd99047db3e3b24",
            "target_id": "i-0ede365388ad37246"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_alb_target_group.lb-target",
            "module.ec2.aws_instance.worker",
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01a00762f46d584a1",
            "arn": "arn:aws:ec2:ap-south-1:696717482880:instance/i-03afc8b46faef2f61",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03afc8b46faef2f61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "coding-cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0be20b2eb85159e6f"
              }
            ],
            "primary_network_interface_id": "eni-0be20b2eb85159e6f",
            "private_dns": "ip-10-0-65-99.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.65.99",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00a57a9a319b29f93",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9dfde9508baa64b",
            "tags": {
              "Name": "Docker"
            },
            "tags_all": {
              "Name": "Docker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0208f40c997c823fa"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "i-03afc8b46faef2f61",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01a00762f46d584a1",
            "arn": "arn:aws:ec2:ap-south-1:696717482880:instance/i-02227ea299a5f3a19",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02227ea299a5f3a19",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "coding-cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bc3a0126091048d8"
              }
            ],
            "primary_network_interface_id": "eni-0bc3a0126091048d8",
            "private_dns": "ip-10-0-20-236.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.236",
            "public_ip": "13.201.92.195",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04d001be7e8a80f89",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f766eb264e22f24",
            "tags": {
              "Name": "Jenkins"
            },
            "tags_all": {
              "Name": "Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069773ff59e97048f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "i-02227ea299a5f3a19",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01a00762f46d584a1",
            "arn": "arn:aws:ec2:ap-south-1:696717482880:instance/i-0cd2238d8e89ab094",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd2238d8e89ab094",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "coding-cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-075a3d70b37d33901"
              }
            ],
            "primary_network_interface_id": "eni-075a3d70b37d33901",
            "private_dns": "ip-10-0-74-145.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.74.145",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c113e18bc6a3039f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9dfde9508baa64b",
            "tags": {
              "Name": "K8s-Master"
            },
            "tags_all": {
              "Name": "K8s-Master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ca55ad230eeb4e1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "i-0cd2238d8e89ab094",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01a00762f46d584a1",
            "arn": "arn:aws:ec2:ap-south-1:696717482880:instance/i-0ede365388ad37246",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ede365388ad37246",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "coding-cloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06c20f5eda6634863"
              }
            ],
            "primary_network_interface_id": "eni-06c20f5eda6634863",
            "private_dns": "ip-10-0-112-8.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.112.8",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-074a30be9cf9e20fb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4a3152102af8678",
            "tags": {
              "Name": "K8s-Worker"
            },
            "tags_all": {
              "Name": "K8s-Worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ffc2c3758142fd7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "i-0ede365388ad37246",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key",
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route.terra-priv-route",
            "module.vpc.aws_route.terra-pub-route",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_route_table_association.terra-priva-asso-1",
            "module.vpc.aws_route_table_association.terra-priva-asso-2",
            "module.vpc.aws_route_table_association.terra-pub-asso-1",
            "module.vpc.aws_route_table_association.terra-pub-asso-2",
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-alb-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-docker-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-jenkins-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-master-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-rds-egress-all",
            "module.vpc.aws_vpc_security_group_egress_rule.sg-worker-egress-all",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-alb-ingress-http",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-docker-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-8080",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-jenkins-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-6443",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-all-from-worker",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-master-ingress-ssh",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-rds-ingress-3306",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-10250",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-179",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-31000",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-all-from-master",
            "module.vpc.aws_vpc_security_group_ingress_rule.sg-worker-ingress-ssh"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "terra-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b43f050f0b6762b8",
            "arn": "arn:aws:ec2:ap-south-1:696717482880:elastic-ip/eipalloc-0b43f050f0b6762b8",
            "association_id": "eipassoc-0dda2ab2f4690343e",
            "domain": "vpc",
            "id": "eipalloc-0b43f050f0b6762b8",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0430c7b221c1d6a8f",
            "private_dns": "ip-10-0-28-29.ap-south-1.compute.internal",
            "private_ip": "10.0.28.29",
            "public_dns": "ec2-15-207-215-109.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.215.109",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "NAT-EIP"
            },
            "tags_all": {
              "Name": "NAT-EIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:internet-gateway/igw-024ea9987a39cb0da",
            "id": "igw-024ea9987a39cb0da",
            "owner_id": "696717482880",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-IGW"
            },
            "tags_all": {
              "Name": "Coding-Cloud-IGW"
            },
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terra-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b43f050f0b6762b8",
            "association_id": "eipassoc-0dda2ab2f4690343e",
            "connectivity_type": "public",
            "id": "nat-0bb1425d9f55d91f2",
            "network_interface_id": "eni-0430c7b221c1d6a8f",
            "private_ip": "10.0.28.29",
            "public_ip": "15.207.215.109",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00f766eb264e22f24",
            "tags": {
              "Name": "Coding-Cloud-NAT"
            },
            "tags_all": {
              "Name": "Coding-Cloud-NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "terra-priv-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-059f8e1b47e498c5d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bb1425d9f55d91f2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-059f8e1b47e498c5d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-059f8e1b47e498c5d"
          },
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "terra-pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-024ea9987a39cb0da",
            "id": "r-rtb-04749f72d6cc8561c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-04749f72d6cc8561c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-04749f72d6cc8561c"
          },
          "dependencies": [
            "module.vpc.aws_eip.terra-eip",
            "module.vpc.aws_internet_gateway.terra-igw",
            "module.vpc.aws_nat_gateway.terra-nat",
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:route-table/rtb-059f8e1b47e498c5d",
            "id": "rtb-059f8e1b47e498c5d",
            "owner_id": "696717482880",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bb1425d9f55d91f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Coding-Cloud-Private-Table"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Private-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "rtb-059f8e1b47e498c5d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:route-table/rtb-04749f72d6cc8561c",
            "id": "rtb-04749f72d6cc8561c",
            "owner_id": "696717482880",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024ea9987a39cb0da",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Coding-Cloud-Public-Table"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Public-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "rtb-04749f72d6cc8561c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-priva-asso-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a48482c91ca21d4",
            "region": "ap-south-1",
            "route_table_id": "rtb-059f8e1b47e498c5d",
            "subnet_id": "subnet-0e9dfde9508baa64b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_subnet.terra-sub-priva-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-priva-asso-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017f007cff52660f0",
            "region": "ap-south-1",
            "route_table_id": "rtb-059f8e1b47e498c5d",
            "subnet_id": "subnet-0d4a3152102af8678"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.terra-private",
            "module.vpc.aws_subnet.terra-sub-priva-2",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-pub-asso-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5d0957c99cc7361",
            "region": "ap-south-1",
            "route_table_id": "rtb-04749f72d6cc8561c",
            "subnet_id": "subnet-00f766eb264e22f24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_subnet.terra-pub-sub-1",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-pub-asso-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074c404493d08a3fb",
            "region": "ap-south-1",
            "route_table_id": "rtb-04749f72d6cc8561c",
            "subnet_id": "subnet-0ddaf1f0660136aa8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.terra-public",
            "module.vpc.aws_subnet.terra-pub-sub-2",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group/sg-07834ed1cef5241d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07834ed1cef5241d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260918124300329400000004",
            "name_prefix": "terraform-",
            "owner_id": "696717482880",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sg-07834ed1cef5241d7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group/sg-0208f40c997c823fa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0208f40c997c823fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20260918124300328500000003",
            "name_prefix": "terraform-",
            "owner_id": "696717482880",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Docker-SG"
            },
            "tags_all": {
              "Name": "Docker-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sg-0208f40c997c823fa",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group/sg-069773ff59e97048f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069773ff59e97048f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20260918124301197400000008",
            "name_prefix": "terraform-",
            "owner_id": "696717482880",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins-Master-SG"
            },
            "tags_all": {
              "Name": "Jenkins-Master-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sg-069773ff59e97048f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-k8s-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group/sg-04ca55ad230eeb4e1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ca55ad230eeb4e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 179,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 179
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-03ffc2c3758142fd7"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20260918124300331100000006",
            "name_prefix": "terraform-",
            "owner_id": "696717482880",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "K8s-Master-SG"
            },
            "tags_all": {
              "Name": "K8s-Master-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sg-04ca55ad230eeb4e1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-k8s-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group/sg-03ffc2c3758142fd7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ffc2c3758142fd7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 179,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 179
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 31000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-04ca55ad230eeb4e1"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20260918124300330400000005",
            "name_prefix": "terraform-",
            "owner_id": "696717482880",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "K8s-Worker-SG"
            },
            "tags_all": {
              "Name": "K8s-Worker-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sg-03ffc2c3758142fd7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group/sg-0c3dd1e28d47e88c9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3dd1e28d47e88c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20260918124301096000000007",
            "name_prefix": "terraform-",
            "owner_id": "696717482880",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-SG"
            },
            "tags_all": {
              "Name": "RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sg-0c3dd1e28d47e88c9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:subnet/subnet-00f766eb264e22f24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f766eb264e22f24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "696717482880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Public-Subnet-1"
            },
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "subnet-00f766eb264e22f24",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:subnet/subnet-0ddaf1f0660136aa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddaf1f0660136aa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "696717482880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Public-Subnet-2"
            },
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "subnet-0ddaf1f0660136aa8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-sub-priva-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:subnet/subnet-0e9dfde9508baa64b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9dfde9508baa64b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "696717482880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Private-Subnet-1"
            },
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "subnet-0e9dfde9508baa64b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-sub-priva-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:subnet/subnet-0d4a3152102af8678",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4a3152102af8678",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "696717482880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Coding-Cloud-Private-Subnet-2"
            },
            "vpc_id": "vpc-0a3d99fdba508055f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "subnet-0d4a3152102af8678",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:vpc/vpc-0a3d99fdba508055f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c306f97b676d725",
            "default_route_table_id": "rtb-0af8af2d2e754c2e4",
            "default_security_group_id": "sg-0e81c6282bd6798fb",
            "dhcp_options_id": "dopt-0c911c9c44b0aac42",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3d99fdba508055f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af8af2d2e754c2e4",
            "owner_id": "696717482880",
            "region": "ap-south-1",
            "tags": {
              "Name": "Coding-Cloud-VPC"
            },
            "tags_all": {
              "Name": "Coding-Cloud-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "vpc-0a3d99fdba508055f",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-alb-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-09c3c340e05e4310e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09c3c340e05e4310e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-07834ed1cef5241d7",
            "security_group_rule_id": "sgr-09c3c340e05e4310e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-09c3c340e05e4310e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-docker-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-041b34cf5a8521d8a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-041b34cf5a8521d8a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0208f40c997c823fa",
            "security_group_rule_id": "sgr-041b34cf5a8521d8a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-041b34cf5a8521d8a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-jenkins-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-0ed1e26e75e983177",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ed1e26e75e983177",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-069773ff59e97048f",
            "security_group_rule_id": "sgr-0ed1e26e75e983177",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-0ed1e26e75e983177",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-master-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-09fd622d4df253c7b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09fd622d4df253c7b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-04ca55ad230eeb4e1",
            "security_group_rule_id": "sgr-09fd622d4df253c7b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-09fd622d4df253c7b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-rds-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-0b5b5812170872fe1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b5b5812170872fe1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0c3dd1e28d47e88c9",
            "security_group_rule_id": "sgr-0b5b5812170872fe1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-0b5b5812170872fe1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg-worker-egress-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-045173ceb990018fd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-045173ceb990018fd",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-03ffc2c3758142fd7",
            "security_group_rule_id": "sgr-045173ceb990018fd",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-045173ceb990018fd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-alb-ingress-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-0d8c940ec7948e886",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0d8c940ec7948e886",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-07834ed1cef5241d7",
            "security_group_rule_id": "sgr-0d8c940ec7948e886",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-0d8c940ec7948e886",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-alb",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-docker-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-07a4bbd729e84616d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-07a4bbd729e84616d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0208f40c997c823fa",
            "security_group_rule_id": "sgr-07a4bbd729e84616d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-07a4bbd729e84616d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-docker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-jenkins-ingress-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-07fff2cd443f3f5c8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-07fff2cd443f3f5c8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-069773ff59e97048f",
            "security_group_rule_id": "sgr-07fff2cd443f3f5c8",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-07fff2cd443f3f5c8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-jenkins-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-0efa420827ec30673",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0efa420827ec30673",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-069773ff59e97048f",
            "security_group_rule_id": "sgr-0efa420827ec30673",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-0efa420827ec30673",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-jenkins",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-master-ingress-179",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-028db9d66b0c7d30f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 179,
            "id": "sgr-028db9d66b0c7d30f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-04ca55ad230eeb4e1",
            "security_group_rule_id": "sgr-028db9d66b0c7d30f",
            "tags": null,
            "tags_all": {},
            "to_port": 179
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-028db9d66b0c7d30f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-master-ingress-6443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-0e7b55a02a77d9f98",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-0e7b55a02a77d9f98",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-04ca55ad230eeb4e1",
            "security_group_rule_id": "sgr-0e7b55a02a77d9f98",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-0e7b55a02a77d9f98",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-master-ingress-all-from-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-09db3d7f66c16a85b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09db3d7f66c16a85b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03ffc2c3758142fd7",
            "region": "ap-south-1",
            "security_group_id": "sg-04ca55ad230eeb4e1",
            "security_group_rule_id": "sgr-09db3d7f66c16a85b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-09db3d7f66c16a85b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-master-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-0aae1989d34fd9ba6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0aae1989d34fd9ba6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-04ca55ad230eeb4e1",
            "security_group_rule_id": "sgr-0aae1989d34fd9ba6",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-0aae1989d34fd9ba6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-rds-ingress-3306",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-033b9253ce482d625",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-033b9253ce482d625",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0c3dd1e28d47e88c9",
            "security_group_rule_id": "sgr-033b9253ce482d625",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-033b9253ce482d625",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-rds",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-10250",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-0897bdd63cee1bd9e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 10250,
            "id": "sgr-0897bdd63cee1bd9e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-03ffc2c3758142fd7",
            "security_group_rule_id": "sgr-0897bdd63cee1bd9e",
            "tags": null,
            "tags_all": {},
            "to_port": 10250
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-0897bdd63cee1bd9e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-179",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-003a46a63e2b09a0e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 179,
            "id": "sgr-003a46a63e2b09a0e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-03ffc2c3758142fd7",
            "security_group_rule_id": "sgr-003a46a63e2b09a0e",
            "tags": null,
            "tags_all": {},
            "to_port": 179
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-003a46a63e2b09a0e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-31000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-07554fa64bd63a776",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 31000,
            "id": "sgr-07554fa64bd63a776",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-03ffc2c3758142fd7",
            "security_group_rule_id": "sgr-07554fa64bd63a776",
            "tags": null,
            "tags_all": {},
            "to_port": 31000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-07554fa64bd63a776",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-all-from-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-002c563a5a6c279bb",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-002c563a5a6c279bb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-04ca55ad230eeb4e1",
            "region": "ap-south-1",
            "security_group_id": "sg-03ffc2c3758142fd7",
            "security_group_rule_id": "sgr-002c563a5a6c279bb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-002c563a5a6c279bb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-master",
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg-worker-ingress-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:696717482880:security-group-rule/sgr-0dbb6f09c0e101589",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0dbb6f09c0e101589",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-03ffc2c3758142fd7",
            "security_group_rule_id": "sgr-0dbb6f09c0e101589",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696717482880",
            "id": "sgr-0dbb6f09c0e101589",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg-k8s-worker",
            "module.vpc.aws_vpc.terra-vpc"
          ]
        }
      ]
    }
  ]
}